# simba

./: .gitignore  LICENSE  README.md  README.org  pyproject.toml  requirements.txt
project/: admin.py  forms.py  models.py  urls.py  views.py
project/migrations/: 0010_remove_signup_email_item_bulk_price_item_chef_price_and_more.py  0011_sale_sale_id.py  0012_sale_created_at_sale_customer_name.py  0013_remove_sale_customer_name.py  0014_alter_item_i_type.py  0015_alter_item_i_type.py  0016_alter_item_i_type.py  0017_rename_cost_sale_price_remove_item_manufacturer_and_more.py  0018_sale_payment_status.py  0019_sale_customer_name_alter_sale_payment_status.py  0020_remove_sale_customer_name_item_gst_sale_gst_subtotal.py  0021_sale_customer_addrs_sale_customer_name.py  0022_sale_customer_mobile.py  0023_item_tsales.py  0024_sale_discount.py  0025_sale_sale_price.py  0026_delete_signup_alter_item_bulk_price_and_more.py  0027_sale_return_status.py  0028_alter_sale_return_status.py  0029_cater.py  0030_cater_gst_subtotal.py  0031_cater_subtotal.py  0032_cater_created_at.py
project/templates/: add_customer_info.html  bill.html  cater.html  cater_bill.html  cater_id.html  cater_list.html  edit.html  home.html  home_wilogin.html  list.html  login.html  reorder.html  return_bill.html  return_items.html  sale.html  sale_list.html  view_charts.html
supply/: settings.py
