[tool.poetry]
name = "simba"
version = "0.1.0"
description = "Simple inventory management & billing application"
authors = ["lumi denoir <lumidenoir@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
weasyprint = "^62.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
